--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: An introduction to data science
 logo: /images/3871544.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+description: A website to learn about the useful and interesting world of data science.
+show_downloads: false
+google_analytics: false
 theme: jekyll-theme-minimal
