--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: An introduction to data science
-logo: /images/3871544.png
+logo: /images/goldenretriever_logo.png
 description: A website to learn about the useful and interesting world of data science.
 show_downloads: false
 google_analytics: false
