--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,25 @@ description: A website to learn about the useful and interesting world of data s
 show_downloads: false
 google_analytics: false
 theme: jekyll-theme-minimal
+footer_content: "Copyright Solis-Lemus lab &copy; 2023. Distributed by an <a href=\"https://github.com/crsl4/learning-data-science/tree/master/LICENSE\">MIT license.</a>"
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: blue
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: purple
+  warning:
+    title: Warning
+    color: red
+compress_html:
+  blanklines: true
+# LaTeX rendering via "katex" (KaTeX, default) or "mathjax" (MathJax) or "none" / "off" (NO rendering)
+# https://github.com/just-the-docs/just-the-docs/issues/198
+latex: katex
