--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: /images/goldenretriever_logo.png
 description: A website to learn about the useful and interesting world of data science.
 show_downloads: false
 google_analytics: false
-theme: jekyll-theme-minimal
+remote_theme: just-the-docs/just-the-docs
 footer_content: "Copyright Solis-Lemus lab &copy; 2023. Distributed by an <a href=\"https://github.com/crsl4/learning-data-science/tree/master/LICENSE\">MIT license.</a>"
 callouts_level: quiet # or loud
 callouts:
