updated genetic diversity

--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,9 @@ callouts:
   warning:
     title: Warning
     color: red
+  youtube:
+    title: YouTube
+    color: red
 compress_html:
   blanklines: true
 # LaTeX rendering via "katex" (KaTeX, default) or "mathjax" (MathJax) or "none" / "off" (NO rendering)
