--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@ exclude:
 callouts_level: quiet # or loud
 callouts:
   highlight:
-    color: yellow
+    color: #90EE90
   important:
     title: Important
     color: blue
   key:
     title: Key
-    color: green
+    color: yellow
   note:
     title: Note
     color: purple
@@ -28,7 +28,7 @@ callouts:
     color: red
   youtube:
     title: YouTube
-    color: red
+    color: #FFB6C1
 compress_html:
   blanklines: true
 # LaTeX rendering via "katex" (KaTeX, default) or "mathjax" (MathJax) or "none" / "off" (NO rendering)
